--- a/public/views/login.html
+++ b/public/views/login.html
@@ -9,8 +9,8 @@
     </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
-  
-  <body>  
+
+  <body>
 <h1>Login</h1>
 <form>
   User name:<br>
@@ -19,12 +19,12 @@
   <input id="psw" type="password" name="psw">
 </form>
 <br>
-<a href="./signup">signup</a>
-
+<div>
+  Not already a user?
+<a href="./signup">signup here</a>
+</div>
 
 	<script src="js/login.js"></script>
-	
+
   </body>
-</html>  
-  
-  
+</html>
