--- a/public/views/account.html
+++ b/public/views/account.html
@@ -117,7 +117,7 @@ top: 50px;
         </button>
         <div class="dropdown-content">
           <a href="#">My Account</a>
-          <a href="#">Log Out</a>
+          <a href="./login.html">Log Out</a>
     </div>
   </div>
 
