--- a/public/views/login.html
+++ b/public/views/login.html
@@ -5,7 +5,17 @@
     <title>Ajax</title>
     <meta charset="utf-8"/>
     <style type="text/css">
-
+body{
+    background: url(back.jpg);
+    font-family: 'Courier New', Courier, monospace;
+    font-style: oblique;
+    font-variant: small-caps;
+      color: white;
+      font-size: 30px;
+}
+  a {
+        color: red;
+      }
     </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
@@ -21,7 +31,7 @@
 <br>
 <div>
   Not already a user?
-<a href="./signup">signup here</a>
+<a href="./signup.html">signup here</a>
 </div>
 
 	<script src="js/login.js"></script>
