--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -5,7 +5,14 @@
     <title>Ajax</title>
     <meta charset="utf-8"/>
     <style type="text/css">
-
+body{
+    background: url(back.jpg);
+    font-family: 'Courier New', Courier, monospace;
+    font-style: oblique;
+    font-variant: small-caps;
+      color: white;
+      font-size: 30px;
+}
     </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
@@ -21,6 +28,7 @@
 
 
 	<script src="js/signup.js"></script>
+  
 	
   </body>
 </html>  
