--- a/public/views/account.html
+++ b/public/views/account.html
@@ -121,7 +121,7 @@ top: 50px;
     </div>
   </div>
 
-  <a href="#create">Create</a>
+   <a href="./create.html">Create</a>
     <a href="#join">Join</a>
 </div>
 
