--- a/public/views/account.html
+++ b/public/views/account.html
@@ -122,7 +122,7 @@ top: 50px;
   </div>
 
    <a href="./create.html">Create</a>
-    <a href="#join">Join</a>
+ <a href="./join.html">Join</a>
 </div>
 
 
