--- a/public/views/create.html
+++ b/public/views/create.html
@@ -7,7 +7,48 @@
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="altIndex.css">
     <style type="text/css">
+body{
+    background: url(back.jpg);
+    font-family: 'Courier New', Courier, monospace;
+    font-style: oblique;
+    font-variant: small-caps;
+}
+input[type="button"],input[type="reset"],input[type="submit"]{
+    background-color: #131313;
+    color:#ffffff;
+    font-family: 'Courier New', Courier, monospace;
+    font-style: oblique;
+    font-variant: small-caps;
+    border: 2px outset red;
+    font-size: 20px
+}
+header {
+    background-color:#000000;
+    color:whitesmoke;
+    font: 10px;
+    border:#cc0000 5px outset;
+    display: block;
+    font-size: 2em;
+    line-height: .5em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    padding-inline-start: 0.5em;
+    resize:none;
+}
 
+section{
+    font-size: 20px;
+    color:whitesmoke;
+    border:#cc0000 5px outset;
+    background-color: rgba(0, 0, 0, 0.3);
+    padding-block-start: 0.35em;
+    padding-inline-start: 0.75em;
+    padding-inline-end: 0.75em;
+    padding-block-end: 0.625em;
+    width: 500px;
+
+}
     </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
