--- a/public/views/login.html
+++ b/public/views/login.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8"/>
     <style type="text/css">
 body{
+	 text-align: center;
     background: url(back.jpg);
     font-family: 'Courier New', Courier, monospace;
     font-style: oblique;
