--- a/public/views/account.html
+++ b/public/views/account.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
-        body {
+         body {
           font-family: Arial, Helvetica, sans-serif;
         }
 
@@ -19,6 +19,9 @@
 
 
         .navbar a {
+          font-family: 'Courier New', Courier, monospace;
+    font-style: oblique;
+    font-variant: small-caps;
           float: right;
           font-size: 20px;
           color: white;
@@ -33,13 +36,15 @@
         }
 
         .dropdown .dropbtn {
+           font-family: 'Courier New', Courier, monospace;
+    font-style: oblique;
+    font-variant: small-caps;
           font-size: 20px;
           border: none;
           outline: none;
           color: white;
           padding: 14px 16px;
           background-color: inherit;
-          font-family: inherit;
           margin: 0;
         }
 
@@ -57,6 +62,9 @@
         }
 
         .dropdown-content a {
+          font-family: 'Courier New', Courier, monospace;
+    font-style: oblique;
+    font-variant: small-caps;
           float: none;
           color: black;
           padding: 12px 16px;
@@ -68,7 +76,7 @@
         .dropdown-content a:hover {
           background-color: #ddd;
         }
-        
+
 .account{
 
     background-image: url("back.jpg");
