--- a/public/views/create.html
+++ b/public/views/create.html
@@ -5,9 +5,10 @@
     <title>SETTINGS</title>
     <link rel="icon" type="image/png" href="/views/PNG/AS.png">
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="altIndex.css">
+    <link rel="stylesheet">
     <style type="text/css">
 body{
+      text-align: center;
     background: url(back.jpg);
     font-family: 'Courier New', Courier, monospace;
     font-style: oblique;
@@ -22,7 +23,10 @@ input[type="button"],input[type="reset"],input[type="submit"]{
     border: 2px outset red;
     font-size: 20px
 }
+
 header {
+  
+
     background-color:#000000;
     color:whitesmoke;
     font: 10px;
@@ -38,6 +42,9 @@ header {
 }
 
 section{
+
+ 
+
     font-size: 20px;
     color:whitesmoke;
     border:#cc0000 5px outset;
@@ -49,18 +56,102 @@ section{
     width: 500px;
 
 }
+
+        .navbar {
+          overflow: hidden;
+          background-color: #000000;
+        }
+
+
+        .navbar a {
+          float: right;
+          font-size: 20px;
+          color: white;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+        }
+
+        .dropdown {
+          float: right;
+          overflow: hidden;
+        }
+
+        .dropdown .dropbtn {
+             font-family: 'Courier New', Courier, monospace;
+    font-style: oblique;
+    font-variant: small-caps;
+          font-size: 20px;
+          border: none;
+          outline: none;
+          color: white;
+          padding: 14px 16px;
+          background-color: inherit;
+          margin: 0;
+        }
+
+        .navbar a:hover, .dropdown:hover .dropbtn {
+          background-color: red;
+        }
+
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f9f9f9;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+        }
+
+        .dropdown-content a {
+          float: none;
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+          text-align: left;
+        }
+
+        .dropdown-content a:hover {
+          background-color: #ddd;
+        }
+ .dropdown:hover .dropdown-content {
+          display: block;
+
+        }
+        .player{
+                text-align: center;
+        }
     </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
 
     <body>
+         <div class="navbar">
+
+      <div class="dropdown">
+
+
+        <button class="dropbtn">Username
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="./account.html">My Account</a>
+          <a href="./login.html">Log Out</a>
+    </div>
+  </div>
+
+  <a href="./create.html">Create</a>
+    <a href="./join.html">Join</a>
+</div>
+
         <header>
         <h1>SETTINGS</h1>
         </header>
     <br>
 
         <form action="#">
-            <section id="playersettings">
+            <section id="playersettings" class="playerSettings">
             <fieldset>
             <legend>Player</legend>
                 <div id = "Player">
