deleted sessions.html added back

--- a/public/views/create.html
+++ b/public/views/create.html
@@ -9,7 +9,7 @@
     <style type="text/css">
 body{
       text-align: center;
-    background: url(back.jpg);
+    background: url(back.png);
     font-family: 'Courier New', Courier, monospace;
     font-style: oblique;
     font-variant: small-caps;
@@ -25,7 +25,7 @@ input[type="button"],input[type="reset"],input[type="submit"]{
 }
 
 header {
-  
+
 
     background-color:#000000;
     color:whitesmoke;
@@ -43,7 +43,7 @@ header {
 
 section{
 
- 
+
 
     font-size: 20px;
     color:whitesmoke;
@@ -144,7 +144,7 @@ section{
   <a href="./create.html">Create</a>
     <a href="./join.html">Join</a>
 </div>
-
+<!--   HTML starts here        -->
         <header>
         <h1>SETTINGS</h1>
         </header>
