--- a/public/views/login.html
+++ b/public/views/login.html
@@ -7,7 +7,7 @@
     <style type="text/css">
 body{
 	 text-align: center;
-    background: url(back.jpg);
+    background: url(back.png);
     font-family: 'Courier New', Courier, monospace;
     font-style: oblique;
     font-variant: small-caps;
