--- a/public/views/account.html
+++ b/public/views/account.html
@@ -4,118 +4,16 @@
   <head>
     <title>Ajax</title>
     <meta charset="utf-8"/>
-    <style type="text/css">
+      <link rel="stylesheet" href="account.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <style>
-         body {
-          font-family: Arial, Helvetica, sans-serif;
-        }
-
-        .navbar {
-          overflow: hidden;
-          background-color: #000000;
-        }
 
 
-        .navbar a {
-          font-family: 'Courier New', Courier, monospace;
-    font-style: oblique;
-    font-variant: small-caps;
-          float: right;
-          font-size: 20px;
-          color: white;
-          text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-        }
 
-        .dropdown {
-          float: right;
-          overflow: hidden;
-        }
-
-        .dropdown .dropbtn {
-           font-family: 'Courier New', Courier, monospace;
-    font-style: oblique;
-    font-variant: small-caps;
-          font-size: 20px;
-          border: none;
-          outline: none;
-          color: white;
-          padding: 14px 16px;
-          background-color: inherit;
-          margin: 0;
-        }
-
-        .navbar a:hover, .dropdown:hover .dropbtn {
-          background-color: red;
-        }
-
-        .dropdown-content {
-          display: none;
-          position: absolute;
-          background-color: #f9f9f9;
-          min-width: 160px;
-          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-          z-index: 1;
-        }
-
-        .dropdown-content a {
-          font-family: 'Courier New', Courier, monospace;
-    font-style: oblique;
-    font-variant: small-caps;
-          float: none;
-          color: black;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-          text-align: left;
-        }
-
-        .dropdown-content a:hover {
-          background-color: #ddd;
-        }
-
-.account{
-
-    background-image: url("back.jpg");
-    height: 100vh;
-   text-align: center;
-   color: white;
-     font-family: 'Courier New', Courier, monospace;
-    font-style: italic;
-    font-variant: small-caps;
-    font-size: 25px;
-
-}
-        input[type="button"],input[type="reset"]{
-    background-color: #131313;
-    color:#ffffff;
-      font-size: 25px;
-    font-family: 'Courier New', Courier, monospace;
-    font-style: oblique;
-    font-variant: small-caps;
-    border: 2px outset red;
-}
-        .avatar {
-          vertical-align: middle;
-position: relative;
-top: 50px;
-          width: 200px;
-          height: 200px;
-          border-radius: 50%;
-        }
-        .dropdown:hover .dropdown-content {
-          display: block;
-
-        }
-        </style>
-    </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
 
-  <body>   <div class="navbar">
+  <div class="navbar">
 
       <div class="dropdown">
 
@@ -134,8 +32,8 @@ top: 50px;
 </div>
 
 
-      
-          <div class = "account">
+<body>
+          <div >
             <img src="https://th.bing.com/th/id/OIP.2z0R3slgX06PHxj0dEZIiQHaHa?pid=ImgDet&rs=1" alt="Avatar" class="avatar">
             <br>
                <br>
@@ -157,7 +55,7 @@ top: 50px;
         <input id="updateButton" type="button" value="Update" />
 
     <input id="logoutButton" type="button" value="Logout" />
-   
+
 </div>
 <br>
 
