--- a/public/views/create.html
+++ b/public/views/create.html
@@ -5,124 +5,9 @@
     <title>SETTINGS</title>
     <link rel="icon" type="image/png" href="/views/PNG/AS.png">
     <meta charset="utf-8"/>
-    <link rel="stylesheet">
-    <style type="text/css">
-body{
-      text-align: center;
-    background: url(back.png);
-    font-family: 'Courier New', Courier, monospace;
-    font-style: oblique;
-    font-variant: small-caps;
-}
-input[type="button"],input[type="reset"],input[type="submit"]{
-    background-color: #131313;
-    color:#ffffff;
-    font-family: 'Courier New', Courier, monospace;
-    font-style: oblique;
-    font-variant: small-caps;
-    border: 2px outset red;
-    font-size: 20px
-}
-
-header {
+      <link rel="stylesheet" href="create.css">
 
 
-    background-color:#000000;
-    color:whitesmoke;
-    font: 10px;
-    border:#cc0000 5px outset;
-    display: block;
-    font-size: 2em;
-    line-height: .5em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    padding-inline-start: 0.5em;
-    resize:none;
-}
-
-section{
-
-
-
-    font-size: 20px;
-    color:whitesmoke;
-    border:#cc0000 5px outset;
-    background-color: rgba(0, 0, 0, 0.3);
-    padding-block-start: 0.35em;
-    padding-inline-start: 0.75em;
-    padding-inline-end: 0.75em;
-    padding-block-end: 0.625em;
-    width: 500px;
-
-}
-
-        .navbar {
-          overflow: hidden;
-          background-color: #000000;
-        }
-
-
-        .navbar a {
-          float: right;
-          font-size: 20px;
-          color: white;
-          text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-        }
-
-        .dropdown {
-          float: right;
-          overflow: hidden;
-        }
-
-        .dropdown .dropbtn {
-             font-family: 'Courier New', Courier, monospace;
-    font-style: oblique;
-    font-variant: small-caps;
-          font-size: 20px;
-          border: none;
-          outline: none;
-          color: white;
-          padding: 14px 16px;
-          background-color: inherit;
-          margin: 0;
-        }
-
-        .navbar a:hover, .dropdown:hover .dropbtn {
-          background-color: red;
-        }
-
-        .dropdown-content {
-          display: none;
-          position: absolute;
-          background-color: #f9f9f9;
-          min-width: 160px;
-          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-          z-index: 1;
-        }
-
-        .dropdown-content a {
-          float: none;
-          color: black;
-          padding: 12px 16px;
-          text-decoration: none;
-          display: block;
-          text-align: left;
-        }
-
-        .dropdown-content a:hover {
-          background-color: #ddd;
-        }
- .dropdown:hover .dropdown-content {
-          display: block;
-
-        }
-        .player{
-                text-align: center;
-        }
-    </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
 
@@ -204,7 +89,7 @@ section{
             </fieldset>
         </section>
         <br>
-        <section id="submit">
+        <section id="submit" >
             <input type="reset" name="reset" value="Reset">
             <input id = "GameButton" type="button" value="Create Game" title= "Start New Game - This Will Clear Any Previous Game History" onClick="SetGame()">
             <label id = "openGame" for = "GameButton" onclick='return false;'> </label>
