--- a/public/views/login.html
+++ b/public/views/login.html
@@ -4,20 +4,9 @@
   <head>
     <title>Ajax</title>
     <meta charset="utf-8"/>
-    <style type="text/css">
-body{
-	 text-align: center;
-    background: url(back.png);
-    font-family: 'Courier New', Courier, monospace;
-    font-style: oblique;
-    font-variant: small-caps;
-      color: white;
-      font-size: 30px;
-}
-  a {
-        color: red;
-      }
-    </style>
+    <link rel="icon" type="image/png" href="/views/PNG/AS.png">
+      <link rel="stylesheet" href="login.css">
+
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
 
