--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -4,21 +4,13 @@
   <head>
     <title>Ajax</title>
     <meta charset="utf-8"/>
-    <style type="text/css">
-body{
-	 text-align: center;
-    background: url(back.jpg);
-    font-family: 'Courier New', Courier, monospace;
-    font-style: oblique;
-    font-variant: small-caps;
-      color: white;
-      font-size: 30px;
-}
-    </style>
+    <link rel="icon" type="image/png" href="/views/PNG/AS.png">
+      <link rel="stylesheet" href="signUp.css">
+
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
-  
-  <body>  
+
+  <body>
 <h1>Signup</h1>
 <form>
   User name:<br>
@@ -29,9 +21,7 @@ body{
 
 
 	<script src="js/signup.js"></script>
-  
-	
+
+
   </body>
-</html>  
-  
-  
+</html>
