threw out books
- mainly worked on connecting the back end of what we currently have
- added the log out functionality to the drop down log out
- took out the book/librarian related stuff since we wont be needing it
- made sure that at least for now the two pages: account and create arent throwing any errors (i think)
- uploading the game settings onto the database ok

--- a/public/views/create.html
+++ b/public/views/create.html
@@ -5,30 +5,24 @@
     <title>CREATE</title>
     <link rel="icon" type="image/png" href="/views/PNG/AS.png">
     <meta charset="utf-8"/>
-      <link rel="stylesheet" href="create.css">
-
-
+      <link rel="stylesheet" href="/views/create.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
 
     <body>
-         <div class="navbar">
-
-      <div class="dropdown">
-
-
-        <button class="dropbtn">Username
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="./account.html">My Account</a>
-          <a href="./login.html">Log Out</a>
-    </div>
-  </div>
-
-  <a href="./create.html">Create</a>
-    <a href="./join.html">Join</a>
-</div>
+      <div class="navbar">
+            <div class="dropdown">
+              <button class="dropbtn">Username
+                  <i class="fa fa-caret-down"></i>
+              </button>
+              <div class="dropdown-content">
+                  <a href="/views/account.html">My Account</a>
+                  <a id = "logoutButton" onclick="logoutClicked()">Log Out</a>
+              </div>
+            </div>
+            <a href="/views/create.html">Create</a>
+            <a href="./join.html">Join</a>
+      </div>
 <!--   HTML starts here        -->
         <header>
         <h1>SETTINGS</h1>
@@ -86,218 +80,7 @@
         </section>
         </form>
 
-        <!-- <script src="js/create.js"> </script> -->
-        <script>
+      <script src="../js/create.js"> </script>
 
-                const deckClassic = 52;
-                const deckJoker = 54;
-
-                const handInput = "<input id='hand' type='number' name='hand' min = '0' max = '60' step = '1' value = '0' title = 'The Amount Of Cards Each Player Starts With' onchange = 'onChangePlayer()'>";
-                const pswInput = "<div id= 'pswInput'><label for = 'psw'> Password:</label><input id = 'psw' type = 'password' name = 'psw' maxlength='10' title = 'Password For Private Game'><input type = 'checkbox' id = 'show' title= 'Show Password' onclick='ToggleVis()'></div>";
-                const shuffleInput = "<div id = 'shuffleDiv'><label for = 'ShuffleOn'>Shuffle On Replacement: </label>  <input type = 'checkbox' id = 'ShuffleOn' title= 'Shuffle Discard Pile Into To Main Deck'></div>";
-                var deckSize = deckClassic;
-                function SetGame(){
-                  console.log("In SetGame");
-                  console.log(" player num: "+ $("#playernum").val() + " dealType: " + $("#deal").val() +
-                              " hand: " + $("#hand").val() + "name: " + $("#name").val() + " infinite: " + $("#Infinite").prop("checked") + "shuffle:" + $("#ShuffleOn").prop("checked")
-                            + " Jokers: " + $("#Joker").prop("checked"));
-                    // $.post("/create",{playernum:$("#playernum").val(), handnum:$("#hand").val(), name:$("#name").val(),
-                    //       infinite:$("#Infinite").prop("checked"),shuffleon:$("#ShuffleOn").prop("checked"),
-                    //       joker:$("#Joker").prop("checked")},success);
-                }
-                function onChangeDeal(){
-                // check dealType change
-                     if($("#deal").val() != "StartingHand"){
-                       $("#hand").remove();
-                     }
-                     else{
-                       $("#Player").append(handInput)
-                     }
-                }
-
-                function onChangePlayer(){
-                  if($("#Joker").prop("checked")){
-                      deckSize = deckJoker;
-                  }
-                  else{
-                      deckSize = deckClassic;
-                  }
-                  let maxHand = parseInt(deckSize/$("#playernum").val());
-                  if($("#hand").val() > maxHand){
-                      $("#hand").attr( 'max',maxHand);
-                      $("#hand").val(maxHand);
-                  }
-                  else{
-                    $("#hand").attr( 'max',deckSize);
-                  }
-                }
-                function onChangeText(){
-                    console.log("change text");
-                    if(!validString($("#name").val())){
-                      $("#name").val("");
-                    }
-                }
-                function ToggleVis(){
-                  var x = $("#psw");
-                  console.log(x.attr('type'));
-                    if (x.attr('type') == "password") {
-                      x.attr("type", 'text');
-                    } else {
-                      x.attr("type", 'password');
-                    }
-                    console.log(x);
-                }
-                function onChangePrivate(){
-                    if($("#Private").prop('checked')){
-                      $("#pswDiv").append(pswInput);
-                    }
-                    else{
-                       $("#pswInput").remove();
-                    }
-                }
-                function onChangeInfinite(){
-                  console.log("chnage infinite");
-                    if($("#Infinite").prop('checked')){
-                      $("#infiniteDiv").append(shuffleInput);
-                    }
-                    else{
-                       $("#shuffleDiv").remove();
-                    }
-                }
-                function validString(string) {
-                    let regex =  /^[A-Za-z0-9!?/*()"' ]*[A-Za-z0-9!?/*()"' ]*$/;
-                    let  validString = regex.test(string);
-                    return (validString);
-                 }
-                // /////////////////////////////////////////////////////////////////////////////////////////////////////////
-                // function UpdateGame(){
-                //     $.post("/update", {name:$("#name").val()},success);
-                // }
-                // /////////////////////////////////////////////////////////////////////////////////////////////////////////
-                // function EndGame(){
-                //     $.get("/end",success);
-                // }
-                // /////////////////////////////////////////////////////////////////////////////////////////////////////////
-                // function discardToMain(){
-                //     $.post("/discardtomain",null);
-                // }
-                // /////////////////////////////////////////////////////////////////////////////////////////////////////////
-                // function ShuffleMain(){
-                //     $.post("/shuffle",null);
-                // }
-                // /////////////////////////////////////////////////////////////////////////////////////////////////////////
-                // function success(data) {
-                //     switch(data.error) {
-                //         // case 0: alert("Game Created!");;break;
-                //         case 1: alert("Invalid Starting Hand");break;
-                //         case 2: alert("No Current Game");break;
-                //         case 3: alert("Name Updated");break;
-                //         case 4: alert("Text Inputs Can Only Include Letters And Numbers");break;
-                //         // case 5: alert("Game Ended");break;
-                //         // case 6: alert("Bad Create: Game In Progress");break;
-                //     }
-                //     if($("#GameButton").val() == "Create Game"){
-                //         $("#GameButton").val("End Game");
-                //         $("#GameButton").attr( 'title',"End The Current Running Game");
-                //         $("#GameButton").attr( 'onClick',"EndGame()");
-                //     }
-                //     else if($("#GameButton").val() == "End Game"){
-                //         $("#GameButton").val("Create Game");
-                //         $("#GameButton").attr( 'title',"Start New Game - This Will Clear Any Previous Game History");
-                //         $("#GameButton").attr( 'onClick',"SetGame()");
-                //     }
-                // }
-                // /////////////////////////////////////////////////////////////////////////////////////////////////////////
-                // check();
-                // function check() {
-                //     $.get("/indexCheck",{playernum:parseInt($("#playernum").val()),joker:$("#Joker").prop("checked")}, checkSuccess);
-                //     let numMilliSeconds = 250;
-                //     setTimeout(check, numMilliSeconds);
-                // }
-                /////////////////////////////////////////////////////////////////////////////////////////////////////////
-                // function checkSuccess(data){
-                //     document.getElementById("numPlayers").innerHTML = "Active Players: " + data.active;
-                //     if(data.gameactive == true){
-                //         $('#playernum').attr("disabled", true);
-                //         $('#hand').attr("disabled", true);
-                //         $('#Infinite').attr("disabled", true);
-                //         $('#ShuffleOn').attr("disabled", true);
-                //         $("#Joker").attr("disabled", true);
-                //
-                //         //$("#GameButton").val("End Game");
-                //         //$("#GameButton").attr( 'title',"End The Current Running Game");
-                //         //$("#GameButton").attr( 'onClick',"EndGame()");
-                //
-                //         // if(data.discard.length > 0){
-                //         //   $("#DiscardToMain").removeAttr("disabled");
-                //         //   $("#DiscardToMain").val("Discard To Main");
-                //         // }
-                //         // else{
-                //         //   $("#DiscardToMain").attr("disabled", true);
-                //         //   $("#DiscardToMain").val("Discard Empty");
-                //         // }
-                //
-                //         if($("#Infinite").prop("checked")){
-                //           $("#DiscardToMain").attr("disabled", true);
-                //           $("#DiscardToMain").val("Discard To Main");
-                //           $("#DiscardToMain").attr( 'title',"Cannot Send Discard To Main In Infinite Mode");
-                //         }
-                //         else{
-                //           $("#DiscardToMain").attr( 'title',"Return Discards To Main");
-                //         }
-                //
-                //         // if(data.empty == true){
-                //         //   $("#Shuffle").val("Main Empty");
-                //         //   $("#Shuffle").attr("disabled", true);
-                //         // }
-                //         // else if(data.empty == false){
-                //         //   $("#Shuffle").val("Shuffle Main");
-                //         //   $("#Shuffle").removeAttr("disabled");
-                //         // }
-                //
-                //         // document.getElementById("openGame").textContent = "Open On /player";
-                //     }
-                //     else if(data.gameactive == false){
-                //         $('#playernum').removeAttr("disabled");
-                //         $('#hand').removeAttr("disabled");
-                //         $('#Infinite').removeAttr("disabled");
-                //         $("#Joker").removeAttr("disabled");
-                //         $('#ShuffleOn').attr("disabled", !$("#Infinite").prop("checked"));
-                //         if($("#ShuffleOn").is(":disabled")){
-                //             $("#ShuffleOn").prop('checked', false);
-                //         }
-                //         // $("#DiscardToMain").attr("disabled", true);
-                //         // $("#DiscardToMain").val("Discard To Main");
-                //         // $("#Shuffle").attr("disabled", true);
-                //
-                //         document.getElementById("openGame").textContent = "";
-                //
-                //         $("#hand").attr( 'max',data.maxhand);
-                //         if($("#hand").val() > data.maxhand){
-                //             $("#hand").val(data.maxhand)
-                //         }
-                //         $("#GameButton").val("Create Game");
-                //         $("#GameButton").attr( 'title',"Start New Game - This Will Clear Any Previous Game History");
-                //         $("#GameButton").attr( 'onClick',"SetGame()");
-                //     }
-                // }
-                /////////////////////////////////////////////////////////////////////////////////////////////////////////
-                $(document).ready(function(){
-                  console.log("ready");
-                    //$("#GameButton").click(SetGame);
-                    //$("#end").click(EndGame);
-                    // $.get("/start",function(data){
-                    //     if(!data)
-                    //         return;
-                    //     $("#playernum").val(data.playernum);
-                    //     $("#hand").val(data.handnum);
-                    //     $("#name").val(data.gamename);
-                    //     $("#Infinite").prop('checked', data.infinite);
-                    //     $("#ShuffleOn").prop('checked', data.shuffleon);
-                    //     $("#Joker").prop('checked', data.joker);
-                    // });
-                });
-
-        </script>
     </body>
 </html>
