--- a/public/views/login.html
+++ b/public/views/login.html
@@ -4,9 +4,7 @@
   <head>
     <title>Ajax</title>
     <meta charset="utf-8"/>
-    <link rel="icon" type="image/png" href="/views/PNG/AS.png">
-      <link rel="stylesheet" href="login.css">
-
+    <link rel="stylesheet" href="/views/login.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
 
@@ -19,10 +17,8 @@
   <input id="psw" type="password" name="psw">
 </form>
 <br>
-<div>
-  Not already a user?
-<a href="./signup.html">signup here</a>
-</div>
+not already a user?
+<a href="./signup">signup here</a>
 
 	<script src="js/login.js"></script>
 
