--- a/public/views/account.html
+++ b/public/views/account.html
@@ -4,62 +4,40 @@
   <head>
     <title>Ajax</title>
     <meta charset="utf-8"/>
-      <link rel="stylesheet" href="account.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
-
+    <link rel="stylesheet" href="/views/account.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
 
-  <div class="navbar">
-
+<div class="navbar">
       <div class="dropdown">
-
-
         <button class="dropbtn">Username
-          <i class="fa fa-caret-down"></i>
+            <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="#">My Account</a>
-          <a href="./login.html">Log Out</a>
-    </div>
-  </div>
-
-   <a href="./create.html">Create</a>
- <a href="./join.html">Join</a>
+            <a href="#">My Account</a>
+            <a id = "logoutButton" onclick="logoutClicked()">Log Out</a>
+        </div>
+      </div>
+      <a href="/views/create.html">Create</a>
+      <a href="./join.html">Join</a>
 </div>
-
 
 <body>
-          <div >
-            <img src="https://th.bing.com/th/id/OIP.2z0R3slgX06PHxj0dEZIiQHaHa?pid=ImgDet&rs=1" alt="Avatar" class="avatar">
-            <br>
-               <br>
-                  <br>
-                     <br>
-
-                        <label for="username">Username:</label>
-            <input type="text" id="username" name="username">
-            <br>
-            <label for="password">Password:</label>
-<input type="text" id="password" name="password" >
-
-
-<br>
-            <br>
-
-          <input type="reset" name="reset" value="Clear">
-
-        <input id="updateButton" type="button" value="Update" />
-
-    <input id="logoutButton" type="button" value="Logout" />
-
-</div>
-<br>
-
-<script src="js/session.js"></script>
-
-  </body>
+    <div>
+        <img src="https://th.bing.com/th/id/OIP.2z0R3slgX06PHxj0dEZIiQHaHa?pid=ImgDet&rs=1" alt="Avatar" class="avatar">
+        <br>
+        <br>
+        <h1 id = "name">Welcome User</h1>
+        <div id = 'editInfo' hidden><label for='password'>Password:</label><input type='password' id='password' name='password' ><input type = 'checkbox' id = 'show' title= 'Show Password' onclick='ToggleVis()'>
+        <input id='updateButton' type='button' value='Update' onclick = 'updateClicked()'/>
+        <input id='cancel' type='button' value='Cancel' onclick='onCancel()'/></div>
+        <input id='edit' type='button' value='Edit Account' onclick='onEdit()'/>
+        <!--<input id='logoutButton' type='button' value='Logout' onclick='logoutClicked()' /><br>
+        <label for='username'>Username:</label><input type='text' id='username' name='username'> -->
+    </div>
+    <br>
+    <script src="../js/account.js"></script>
+</body>
 </html>
