--- a/public/views/adminsession.html
+++ b/public/views/adminsession.html
@@ -9,8 +9,8 @@
     </style>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
-  
-  <body>  
+
+  <body>
 <h1 id="session">Admin Session</h1>
 
     <hr>
@@ -19,42 +19,42 @@
         <legend>Student Information</legend>
 
             <label for="names">Names</label>
-            <select id="names" name="names">
-            </select>     
+            <select id="names" name="names" onchange = "readClicked()">
+            </select>
 
                         <label for="name">Grade:</label>
-            <input type="number" id="grade" name="grade" value=9 min=9 max=12>            
+            <input type="number" id="grade" name="grade" value=9 min=9 max=12>
                         <div>
                           Sports:
               <label for="volleyball">Volleyball</label>
               <input type="checkbox" id="volleyball" name="sports" value="volleyball">
-              <label for="basketball">Basketball</label>      
+              <label for="basketball">Basketball</label>
               <input type="checkbox" id="basketball" name="sports" value="basketball">
               <label for="soccer">Soccer</label>
               <input type="checkbox" id="soccer" name="sports" value="soccer">
-
-
+              <br>
+              <label for="driver">Drivers License</label>
+              <input type="checkbox" id="driver" name="driver" value="driverslicense">
                         </div>
 
-            
+
             <br>
             <br>
 
-          <input type="reset" name="reset" value="Clear Form">            
+          <input type="reset" name="reset" value="Clear Form">
         </fieldset>
       <input id="readButton" type="button" value="Read" />
       <input id="updateButton" type="button" value="Update" />
+      <input id="deleteButton" type="button" value="Delete" />
 
       </form>
 
 <br>
 <div id="logout">
     <input id="logout" type="button" value="Logout" />
-</div>    
+</div>
 
 	<script src="js/adminsession.js"></script>
-	
+
   </body>
-</html>  
-  
-  
+</html>
