--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -4,9 +4,7 @@
   <head>
     <title>Ajax</title>
     <meta charset="utf-8"/>
-    <link rel="icon" type="image/png" href="/views/PNG/AS.png">
-      <link rel="stylesheet" href="signUp.css">
-
+    <link rel="stylesheet" href="/views/signUp.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
 
@@ -21,7 +19,6 @@
 
 
 	<script src="js/signup.js"></script>
-
 
   </body>
 </html>
