--- a/public/views/account.html
+++ b/public/views/account.html
@@ -20,7 +20,7 @@
             <a id = "logoutButton" onclick="logoutClicked()">Log Out</a>
         </div>
       </div>
-      <a href="/views/create.html">Create</a>
+      <a onclick="getCreate()">Create</a>
       <a href="./join.html">Join</a>
 </div>
 
