--- a/public/views/create.html
+++ b/public/views/create.html
@@ -16,7 +16,7 @@
                   <i class="fa fa-caret-down"></i>
               </button>
               <div class="dropdown-content">
-                  <a href="/views/account.html">My Account</a>
+                  <a onclick= "accountClicked()">My Account</a>
                   <a id = "logoutButton" onclick="logoutClicked()">Log Out</a>
               </div>
             </div>
