--- a/public/views/create.html
+++ b/public/views/create.html
@@ -74,8 +74,8 @@
         <br>
         <section id="submit" >
             <input type="reset" name="reset" value="Reset">
-            <input id = "GameButton" type="button" value="Create Game" title= "Start New Game - This Will Clear Any Previous Game History" onClick="SetGame()">
-            <label id = "openGame" for = "GameButton" onclick='return false;'> </label>
+            <input id = "GameButton" type="button" value="Create Game" onclick="SetGame()">
+            <input id = "infoButton" type="button" value="infoButton" onclick="SetGameInfo()">
             <!--<input id = "end" type="button" value="End Game" title= "End the Current Running Game">-->
         </section>
         </form>
