--- a/public/views/login.html
+++ b/public/views/login.html
@@ -5,6 +5,7 @@
     <title>Ajax</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="/views/login.css">
+    <link rel="icon" type="image/png" href="/views/PNG/AS.png">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
 
