--- a/public/views/account.html
+++ b/public/views/account.html
@@ -5,6 +5,7 @@
     <title>Ajax</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="/views/account.css">
+    <link rel="icon" type="image/png" href="/views/PNG/AS.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
