--- a/public/views/account.html
+++ b/public/views/account.html
@@ -25,7 +25,7 @@
 </div>
 
 <body>
-    <div>
+    <div class="center">
         <img src="https://th.bing.com/th/id/OIP.2z0R3slgX06PHxj0dEZIiQHaHa?pid=ImgDet&rs=1" alt="Avatar" class="avatar">
         <br>
         <br>
