--- a/public/views/account.css
+++ b/public/views/account.css
@@ -7,7 +7,14 @@ body{
       color: white;
       font-size: 30px;
 }
-
+.center {
+	margin: 0;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   -ms-transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%);
+}
 .navbar {
  overflow: hidden;
  background-color: #000000;
