--- a/public/views/login.css
+++ b/public/views/login.css
@@ -7,6 +7,14 @@ body{
       color: white;
       font-size: 30px;
 }
+.center {
+  margin: 0;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
   a {
         color: red;
       }
