--- a/public/views/login.html
+++ b/public/views/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/views/login.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
-
+<div class="center">
   <body>
 <h1>Login</h1>
 <form>
@@ -19,7 +19,7 @@
 <br>
 not already a user?
 <a href="./signup">signup here</a>
-
+</div>
 	<script src="js/login.js"></script>
 
   </body>
