--- a/public/views/signUp.css
+++ b/public/views/signUp.css
@@ -7,3 +7,11 @@ body{
       color: white;
       font-size: 30px;
 }
+.center {
+  margin: 0;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
