--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/views/signUp.css">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
-
+<div class="center">
   <body>
 <h1>Signup</h1>
 <form>
@@ -16,7 +16,7 @@
   User password:<br>
   <input id="psw" type="password" name="psw">
 </form>
-
+</div>
 
 	<script src="js/signup.js"></script>
 
