--- a/public/views/signup.html
+++ b/public/views/signup.html
@@ -13,7 +13,7 @@
 <h1>Signup</h1>
 <form>
   User name:<br>
-  <input id="username" type="text" name="username"><br>
+  <input id="username" type="text" name="username" maxlength = 20 title = "Max Length 20 Characters"><br>
   User password:<br>
   <input id="psw" type="password" name="psw">
 </form>
