--- a/public/views/account.css
+++ b/public/views/account.css
@@ -57,8 +57,8 @@ font-variant: small-caps;
 
 .dropdown-content {
  display: none;
- float: right;
  position: absolute;
+ right: 0;
  background-color: #f9f9f9;
  min-width: 100px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -69,9 +69,9 @@ font-variant: small-caps;
  font-family: 'Courier New', Courier, monospace;
 font-style: oblique;
 font-variant: small-caps;
- float: none;
+ float: left;
  color: black;
- padding: 12px 16px;
+ padding: 12px 14px;
  text-decoration: none;
  display: block;
  text-align: left;
