--- a/public/views/create.css
+++ b/public/views/create.css
@@ -92,25 +92,24 @@ font-variant: small-caps;
 }
 
 .dropdown-content {
- display: none;
- float: right;
- position: absolute;
- background-color: #f9f9f9;
- min-width: 100px;
- box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
- z-index: 1;
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: #f9f9f9;
+  min-width: 100px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
 }
 
 .dropdown-content a {
- font-family: 'Courier New', Courier, monospace;
-font-style: oblique;
-font-variant: small-caps;
- float: none;
- color: black;
- padding: 12px 16px;
- text-decoration: none;
- display: block;
- text-align: left;
+  font-style: oblique;
+  font-variant: small-caps;
+   float: left;
+   color: black;
+   padding: 12px 14px;
+   text-decoration: none;
+   display: block;
+   text-align: left;
 }
 
 .dropdown-content a:hover {
