--- a/public/views/player.html
+++ b/public/views/player.html
@@ -15,7 +15,7 @@
     </header> -->
       <canvas id="canvas"> Your browser does not support HTML5 Canvas.</canvas><!-- style="position:absolute; "-->
       <section>
-        <input id = "consoleButton" type= "button" value="hide" onclick="ConsoleButton()"> <br><br>
+      <!--    <input id = "consoleButton" type= "button" value="hide" onclick="ConsoleButton()"> <br><br>  -->
         <!--<input id="ConsoleDown" type= "button" value="ConsoleDown" onclick="ConsoleDown()">
         <input id="ConsoleUp" type= "button" value="ConsoleUp" onclick="ConsoleUp()">-->
       <div id="box">
