--- a/public/views/altPlayer.css
+++ b/public/views/altPlayer.css
@@ -52,6 +52,7 @@ div {
 section{
     position: fixed;
     top: 10px;
+    right: 5px;
     border:#cc0000 5px outset;
     color:whitesmoke;
     float: left;
