--- a/public/views/player.html
+++ b/public/views/player.html
@@ -19,20 +19,16 @@
         <!--<input id="ConsoleDown" type= "button" value="ConsoleDown" onclick="ConsoleDown()">
         <input id="ConsoleUp" type= "button" value="ConsoleUp" onclick="ConsoleUp()">-->
       <div id="box">
-          <label>Username:</label>
-          <input id="nameset" type="text" maxlength="25">
+          <!--<label>Chat:</label>
+          <br>-->
+          <textarea id="chatbox" rows= "12" cols="38" readonly style="resize:none"></textarea>
           <br>
-          <label>Chat:</label>
-          <br>
-          <textarea id="chatbox" rows= "12" cols="45" readonly style="resize:none"></textarea>
-          <br>
-          <label>Send Message</label>
-          <br>
+          <label>Send Message:</label>
           <input id="sendMessage" type="text">
-          <input id="sendButton" type= "submit" value="Send" onClick = "SendMessage()">
+          <!--<input id="sendButton" type= "submit" value="Send" onClick = "SendMessage()">-->
           <hr>
           <div id="tableButtons" style = "align-items: center;">
-            <input id="clearTable" type= "button" value="Clear Table" title= "Discard All Cards On Your Table" onClick = "clearTable()" >
+            <input id="clearTable" type= "button" value="Clear" title= "Discard All Cards On Your Table" onClick = "clearTable()" >
             <input id="pullTable" type= "button" value="Pull" title= " Pull Most Recent Card Back From Table" onClick = "PullTable()" >
             <input id="toTable" type= "button" value="Send To Table" title= "Send Card To Table - Cards Over Limit Will Be Discarded" onClick = "ToTable()" >
           </div>
@@ -40,12 +36,12 @@
           <div id = "pileButtons">
               <input id="drawDiscard" type= "button" disabled value="Draw Discard" title= "Draw One Card From Top of Discard" onClick = "drawDiscard()">
               <input id="discard" type= "button" value="Discard" title= "Discard Currently Selected Card" onClick = "Discard()">
-              <input id="main" type= "button" value="Draw Card" title= "Draw One Card" onClick = "DrawCard()">
+              <input id="main" type= "button" value="Draw" title= "Draw One Card" onClick = "DrawCard()">
           </div>
           <hr>
           <div id = "shiftButtons">
-            <input id="shiftLeft" type= "button" value=" < Shift Left" title= "Shift Hand To The Left" onClick = "shiftLeft()" >
-            <input id="shiftRight" type= "button" value=" Shift Right > " title= "Shift Hand To The Right" onClick = "shiftRight()" >
+            <input id="shiftLeft" type= "button" value=" <Shift Left" title= "Shift Hand To The Left" onClick = "shiftLeft()" >
+            <input id="shiftRight" type= "button" value=" Shift Right> " title= "Shift Hand To The Right" onClick = "shiftRight()" >
           </div>
       </div>
     </section>
