--- a/public/views/create.html
+++ b/public/views/create.html
@@ -21,7 +21,7 @@
                   <a id = "logoutButton" onclick="logoutClicked()">Log Out</a>
               </div>
             </div>
-            <a href="/views/create.html">Create</a>
+            <a>Create</a>
             <a href="./join.html">Join</a>
       </div>
 <!--   HTML starts here        -->
