--- a/public/views/create.html
+++ b/public/views/create.html
@@ -22,7 +22,7 @@
               </div>
             </div>
             <a>Create</a>
-            <a href="./join.html">Join</a>
+            <a onclick= "joinClicked()">Join</a>
       </div>
 <!--   HTML starts here        -->
         <header>
