--- a/public/views/account.html
+++ b/public/views/account.html
@@ -21,13 +21,13 @@
           </button>
 
           <div class="dropdown-content">
-              <a href="#">My Account</a>
+              <a "accountClicked()">My Account</a>
               <br>
               <a id = "logoutButton" onclick="logoutClicked()">Log Out</a>
           </div>
         </div>
         <a onclick="getCreate()">Create</a>
-        <a href="./join.html">Join</a>
+        <a onclick="joinClicked()">Join</a>
   </div>
     <div class="center">
         <img src="https://th.bing.com/th/id/OIP.2z0R3slgX06PHxj0dEZIiQHaHa?pid=ImgDet&rs=1" alt="Avatar" class="avatar">
