--- a/public/views/join.html
+++ b/public/views/join.html
@@ -12,16 +12,19 @@
 
   <body>
     <div class="navbar">
+          <div class="dropdown" style="float:right;" >
+            <button class="dropbtn">Username
+                <i class="fa fa-caret-down"></i>
+            </button>
 
-      <div class="dropdown">
-
-
-        <button class="dropbtn">Username
-          <i class="fa fa-caret-down"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="./account.html">My Account</a>
-          <a href="./login.html">Log Out</a>
+            <div class="dropdown-content">
+                <a "accountClicked()">My Account</a>
+                <br>
+                <a id = "logoutButton" onclick="logoutClicked()">Log Out</a>
+            </div>
+          </div>
+          <a onclick="getCreate()">Create</a>
+          <a onclick="joinClicked()">Join</a>
     </div>
   </div>
 
@@ -38,4 +41,3 @@
 
   </body>
 </html>
-  
