--- a/public/views/join.html
+++ b/public/views/join.html
@@ -25,16 +25,11 @@
           <a onclick="getCreate()">Create</a>
           <a onclick="joinClicked()">Join</a>
     </div>
-  </div>
-
-  <a href="./create.html">Create</a>
-    <a href="./join.html">Join</a>
-  </div>
 <div class="boxJoin">
-<h1>Join a Game</h1>
-
-<h2>JOIN LIST</h2>
-<ul id='messages'></ul></div>
+    <h1>Join a Game</h1>
+        <h2>JOIN LIST</h2>
+        <ul id='messages'></ul>
+</div>
 
 	<script src="js/join.js"></script>
 
