--- a/public/views/create.html
+++ b/public/views/create.html
@@ -17,7 +17,7 @@
               </button>
 
               <div class="dropdown-content">
-                  <a "accountClicked()">My Account</a>
+                  <a onclick = "accountClicked()">My Account</a>
                   <br>
                   <a id = "logoutButton" onclick="logoutClicked()">Log Out</a>
               </div>
