--- a/public/views/account.html
+++ b/public/views/account.html
@@ -21,7 +21,7 @@
           </button>
 
           <div class="dropdown-content">
-              <a "accountClicked()">My Account</a>
+              <a onclick = "accountClicked()">My Account</a>
               <br>
               <a id = "logoutButton" onclick="logoutClicked()">Log Out</a>
           </div>
