--- a/public/views/adminsession.html
+++ b/public/views/adminsession.html
@@ -2,7 +2,7 @@
 <!--   -->
 <html>
   <head>
-    <title>Ajax</title>
+    <title>ADMIN</title>
     <meta charset="utf-8"/>
     <style type="text/css">
 
