--- a/public/views/join.html
+++ b/public/views/join.html
@@ -2,9 +2,9 @@
 <!--   -->
 <html>
   <head>
-    <title>Ajax</title>
+    <title>JOIN</title>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="/views/account.css">
+    <link rel="stylesheet" href="/views/create.css">
     <link rel="icon" type="image/png" href="/views/PNG/AS.png">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
