--- a/public/views/login.html
+++ b/public/views/login.html
@@ -2,7 +2,7 @@
 <!--   -->
 <html>
   <head>
-    <title>Ajax</title>
+    <title>LOGIN</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" href="/views/login.css">
     <link rel="icon" type="image/png" href="/views/PNG/AS.png">
