--- a/public/views/join.html
+++ b/public/views/join.html
@@ -26,8 +26,11 @@
           <a onclick="joinClicked()">Join</a>
     </div>
 <div class="boxJoin">
-    <h1>Join a Game</h1>
-        <h2>JOIN LIST</h2>
+  <header>
+  <h1>JOIN A GAME</h1>
+  </header>
+  <div id = "noGame"> NO ACTIVE GAMES </div>
+      <!--  <h2>JOIN LIST</h2> -->
         <ul id='messages'></ul>
 </div>
 
