--- a/public/views/join.html
+++ b/public/views/join.html
@@ -29,7 +29,8 @@
   <header>
   <h1>JOIN A GAME</h1>
   </header>
-  <div id = "noGame"> NO ACTIVE GAMES </div>
+  <br>
+  <p id = "noGame"> NO ACTIVE GAMES </p>
       <!--  <h2>JOIN LIST</h2> -->
         <ul id='messages'></ul>
 </div>
