--- a/public/views/join.html
+++ b/public/views/join.html
@@ -30,7 +30,7 @@
   <h1>JOIN A GAME</h1>
   </header>
   <br>
-  <p id = "noGame"> NO ACTIVE GAMES </p>
+  <label id = "noGame"> NO ACTIVE GAMES </label>
       <!--  <h2>JOIN LIST</h2> -->
         <ul id='messages'></ul>
 </div>
