--- a/public/views/join.html
+++ b/public/views/join.html
@@ -30,12 +30,12 @@
   <h1>JOIN A GAME</h1>
   </header>
   <br>
-  <label id = "noGame"> NO ACTIVE GAMES </label>
+  <p id = "noGame"> NO ACTIVE GAMES </p>
       <!--  <h2>JOIN LIST</h2> -->
         <ul id='messages'></ul>
 </div>
 
-	<script src="js/join.js"></script>
+
 
   </body>
 </html>
