--- a/public/views/join.html
+++ b/public/views/join.html
@@ -30,7 +30,11 @@
   <h1>JOIN A GAME</h1>
   </header>
   <br>
-  <p id = "noGame"> NO ACTIVE GAMES </p>
+  <p id = "noGame" hidden> NO ACTIVE GAMES </p>
+  <div id = "games">
+
+
+  </div>
       <!--  <h2>JOIN LIST</h2> -->
         <ul id='messages'></ul>
 </div>
