--- a/public/views/join.html
+++ b/public/views/join.html
@@ -27,13 +27,13 @@
     </div>
 <div class="boxJoin">
   <header>
-  <h1>JOIN A GAME</h1>
+  <h1>ACTIVE GAMES</h1>
   </header>
   <br>
   <p id = "noGame" hidden> NO ACTIVE GAMES </p>
   <div id = "allGames" style = "left: 50%">
 
-    
+
   </div>
 </div>
 	<script src="js/join.js"></script>
