--- a/public/views/playerone.html
+++ b/public/views/playerone.html
@@ -8,7 +8,7 @@
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   </head>
   <body>
-      <canvas id="canvas"  style="position:absolute; "> Your browser does not support HTML5 Canvas.</canvas>
+      <canvas id="canvas"> Your browser does not support HTML5 Canvas.</canvas>
       <section id="box">
       <div>
         <textarea id="chatbox" rows= "12" cols="38" readonly style="resize:none"></textarea>
