--- a/public/views/playerone.html
+++ b/public/views/playerone.html
@@ -9,7 +9,7 @@
   </head>
   <body>
       <canvas id="canvas"> Your browser does not support HTML5 Canvas.</canvas>
-      <section id="box">
+      <section>
       <div>
         <textarea id="chatbox" rows= "12" cols="38" readonly style="resize:none"></textarea>
         <br>
