--- a/public/views/player.html
+++ b/public/views/player.html
@@ -28,9 +28,9 @@
           <!--<input id="sendButton" type= "submit" value="Send" onClick = "SendMessage()">-->
           <hr>
           <div id="tableButtons" style = "align-items: center;">
-            <input id="clearTable" type= "button" value="Clear" title= "Discard All Cards On Your Table" onClick = "clearTable()" >
-            <input id="pullTable" type= "button" value="Pull" title= " Pull Most Recent Card Back From Table" onClick = "PullTable()" >
-            <input id="toTable" type= "button" value="Send To Table" title= "Send Card To Table - Cards Over Limit Will Be Discarded" onClick = "ToTable()" >
+            <input id="clearTable" type= "button" value="Clear" title= "Discard All Cards On Your Table" > <!--onClick = "clearTable()" -->
+            <input id="pullTable" type= "button" value="Pull" title= " Pull Most Recent Card Back From Table"><!--onClick = "PullTable()"  -->
+            <input id="toTable" type= "button" value="Send To Table" title= "Send Card To Table - Cards Over Limit Will Be Discarded"><!--onClick = "ToTable()" -->
           </div>
           <hr>
           <div id = "pileButtons">
